--- a/map.html
+++ b/map.html
@@ -7,26 +7,27 @@
     <title>placekeeper</title>
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <header>
-    <h1>Welcome to Place-Keeper</h1>
     <nav>
-        <a class="button" href='index.html'>Home</a>
-        <a class="button" href='user-prefs.html'>Preferences</a>
+        <a class="brand" href="index.html">Place-Keeper</a>
+        <a href="user-prefs.html">Preferences</a>
+        <a href="map.html">Map  <i class="fas fa-map-pin"></i></a>
     </nav>
 </header>
 
 <body onload="initMap()">
     <main>
         <section class="map-container">
-            <div id="map" style="width:600px; height:500px;"></div>
-            <h2>Current Position:</h2>
-
-            <button class="curr-location-btn" onclick="getPosition()"><i class="fas fa-map-marked-alt"></i></button>
-
-            <section class="places">My Places
+            <section class="position-container">
+                <div id="map" style="width:600px; height:500px;"></div>
+            </section>
+            <section class="places">
+                <h3>Current Position:</h3>
+                <button class="curr-location-btn" onclick="getPosition()"><i class="fas fa-map-marked-alt"></i></button>
+                <h3>My Places:</h3>
                 <ul class="places-list"></ul>
             </section>
         </section>
